--- a/tpl/default/css/shaarli.css
+++ b/tpl/default/css/shaarli.css
@@ -1196,3 +1196,7 @@ div.awesomplete > ul {
 .pure-button {
     -moz-user-select: auto;
 }
+
+.search-highlight {
+    background-color: yellow;
+}
